--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -30,8 +30,8 @@
                         </div>
                     </div>
                 </div>
+                <input id="search" type="text" class="form-control" placeholder="Поиск по функциям"><br>
             </div>
-            <input id="search" type="text" class="form-control col-6 offset-1" placeholder="Поиск по функциям"><br>
             <div id="functions" class="offset-2">
             </div>
             <input href="../payment/" class="btn btn-primary col-4 offset-4" type="submit" value="Отправить">
@@ -72,13 +72,13 @@
         }
     }
 
-    let cards = [new Card("Wiki", "Эта фукнция позволяет вам получить статью с википедии по ключевому запросу прямо в телеграмм", "free", "wiki.svg", [1,1,1]),
-    new Card("Anekdot", "Эта функция присылает ыам случайный анекдот и поднимает вам настроение", "free", "smile.svg.png", [1,1,1]),
-    new Card("Screenshot", "Эта функция присылает снимок экрана вашего компьютера в чат с ботом", "free", "wiki.svg", [1,0,0]),
-    new Card("Info about PC", "Эта фукнция присылает вам полную техническую информацию о вашем компьютере", "free", "wiki.svg", [1,0,0]),
-    new Card("Turn off the PC", "Эта фукнция позволяет выключить ваш компьютер дистанционно", "free", "wiki.svg", [1, 0, 0]),
-    new Card("Reboot the PC", "Эта фукнция позволяет перезагрузить ваш компьютер(для этого даже не обязательно находится рядом с ним)", "free", "wiki.svg", [1, 0, 0]),
-    new Card("Panda", "Эта фукнция присылает вам фотографию милой панды. Разве кто-то не любит панд?", "free", "wiki.svg", [1,1,1])]
+    let cards = [new Card("Wiki", "Данная функция обеспечивает возможность получения статьи с веб-ресурса "Википедия" на основе заданного ключевого запроса прямо в мессенджере", "free", "photos/wiki.png", [1,1,1]),
+    new Card("Anekdot", "Данная функция отправляет вам случайный анекдот", "free", "photos/smile.png", [1,1,1]),
+    new Card("Screenshot", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "photos/camera.png", [1,0,0]),
+    new Card("Info about PC", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "photos/info.png", [1,0,0]),
+    new Card("Turn off the PC", "Данная функция обеспечивает возможность удаленного выключения компьютера", "free", "photos/turnoff.png", [1, 0, 0]),
+    new Card("Reboot the PC", "Данная функция предоставляет возможность осуществления перезагрузки компьютера, не присутствуя при этом находясь в непосредственной близости от него.", "free", "photos/reboot.png", [1, 0, 0]),
+    new Card("Panda", "Данная функция предоставляет вам возможность получить изображение обожаемого всеми медведя-панды. Существует ли кто-то, кто не испытывает любви к этим милым созданиям?", "free", "photos/panda.png", [1,1,1])]
 
     for(let i = 0; i < cards.length; ++i){
         let card_values = cards[i]
