--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -72,7 +72,7 @@
         }
     }
 
-    let cards = [new Card("Wiki", "Данная функция обеспечивает возможность получения статьи с веб-ресурса "Википедия" на основе заданного ключевого запроса прямо в мессенджере", "free", "photos/wiki.png", [1,1,1]),
+    let cards = [new Card("Wiki", "Данная функция обеспечивает возможность получения статьи с веб-ресурса 'Википедия' на основе заданного ключевого запроса прямо в мессенджере", "free", "photos/wiki.png", [1,1,1]),
     new Card("Anekdot", "Данная функция отправляет вам случайный анекдот", "free", "photos/smile.png", [1,1,1]),
     new Card("Screenshot", "Данная функция осуществляет отправку изображения экрана вашего персонального компьютера в диалог с ботом", "free", "photos/camera.png", [1,0,0]),
     new Card("Info about PC", "Данная функция предоставляет Вам полный комплекс технической информации о Вашем компьютере", "free", "photos/info.png", [1,0,0]),
