--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -14,6 +14,24 @@ a, p, span{
 }
 
 
+.btn.btn-primary{
+	background-color: #023653;
+	--bs-btn-color:#fff;
+	--bs-btn-bg:#023653;
+	--bs-btn-border-color:#023653;
+	--bs-btn-hover-color:#fff;
+	--bs-btn-hover-bg:#023653;
+	--bs-btn-hover-border-color:#023653;
+	--bs-btn-focus-shadow-rgb:49,132,253;
+	--bs-btn-active-color:#fff;
+	--bs-btn-active-bg:#023653;
+	--bs-btn-active-border-color:#023653;
+	--bs-btn-active-shadow:inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color:#fff;
+	--bs-btn-disabled-bg:#023653;
+	--bs-btn-disabled-border-color:#0d6efd
+}
+
 .checkbox-ios {
 	display: inline-block;    
 	height: 28px;    
