--- a/first/templates/menu.html
+++ b/first/templates/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar" style="background-color: #023653; color: white">
     <div class="container-fluid">
-            <a href="/" style="background-color: ;"><img src="../../staticroot/media/main_logo.png" alt="Logo" width="200" height="100" class="d-inline-block align-text-top"></a>
+            <a href="/" style="margin: -80px; margin-left: -50px;"><img src="../../staticroot/media/main_logo (1).png" alt="Logo" width="300" height="220" class="d-inline-block align-text-top"></a>
         <form class="d-flex col-10">
                 <a class="nav-link text-light m-2" href="/create_bot/">Создать бота</a>
             {% if request.user.is_authenticated %}
