--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -40,7 +40,7 @@
             </div>
             <div id="functions" class="offset-0">
             </div>
-            <input href="../payment/" class="btn btn-primary col-4 offset-4" type="submit" value="Отправить">
+            <input href="../payment/" class="btn btn-primary col-4 offset-4 p-3 fs-4" type="submit" value="Отправить">
         </form>
     </div>
 </div>
