--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -19,7 +19,7 @@
                         data-bs-target="#staticBackdrop"
                         style="font-size: 24px; margin-right: 10px;display: inline-block;">Где взять данные?
                 </button>
-                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                <div class="modal fade" style="margin-top: 15vh;" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                      tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
