--- a/first/templates/index.html
+++ b/first/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container mt-10">
+<div class="container mt-10" style="min-height: 56.5vh;">
     <div class="row mt-10">
         <div class="col-8 offset-2 mt-5">
             <h2 style="font-size: 36px;" class="text-center mt-5">Добро пожаловать на сайт BotGod</h2>
