WIR: исправление подвала

--- a/first/templates/footer.html
+++ b/first/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted mt-5" style="position: absolute; width: 100%;">
+<footer class="text-center text-lg-start bg-light text-muted mt-5" style="position: relative; display: block; width: 100%;">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -49,40 +49,22 @@
           <!-- Grid column -->
   
           <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Products
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Angular</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">React</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Vue</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Laravel</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
               Useful links
             </h6>
             <p>
-              <a href="#!" class="text-reset">Pricing</a>
+              <a href="" class="text-reset">Main</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Settings</a>
+              <a href="registration/" class="text-reset">Registration</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Orders</a>
+              <a href="profile/<int:profile_id>" class="text-reset">Profile</a>
+            </p>
+            <p>
+              <a href="create_bot/" class="text-reset">Create bot</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Help</a>
@@ -93,13 +75,12 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+            <h6 class="text-uppercase fw-bold mb-4">Contacts</h6>
             <p>
               <i class="fas fa-envelope me-3"></i>
               bot_god@gmail.com
             </p>
-            <p><i class="fas fa-phone me-3"></i>+7 (977) 434-52-66</p>
+            <p><i class="fas fa-phone me-3"></i>+7 (967) 182-97-82</p>
           </div>
           <!-- Grid column -->
         </div>
