корректирование подвала, верстка странцы жалоб, корректирование меню сайта

--- a/first/templates/footer.html
+++ b/first/templates/footer.html
@@ -1,37 +1,8 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted mt-5" style="position: relative; display: block; width: 100%;">
-    <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-      <!-- Left -->
-      <!-- Left -->
-  
-      <!-- Right -->
-      <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
+<footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary" style="position: fixed; display: block; bottom-0; left-0; width:100%">
   
     <!-- Section: Links  -->
-    <section class="">
+    <section class="pt-1">
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3">
@@ -47,7 +18,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
@@ -55,13 +26,10 @@
               Useful links
             </h6>
             <p>
-              <a href="" class="text-reset">Main</a>
+              <a href="/" class="text-reset h-25">Main</a>
             </p>
             <p>
               <a href="registration/" class="text-reset">Registration</a>
-            </p>
-            <p>
-              <a href="profile/<int:profile_id>" class="text-reset">Profile</a>
             </p>
             <p>
               <a href="create_bot/" class="text-reset">Create bot</a>
@@ -71,7 +39,7 @@
             </p>
           </div>
           <!-- Grid column -->
-  
+
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
@@ -89,5 +57,5 @@
     </section>
     <!-- Section: Links  -->
 
-  </footer>
+</footer>
   <!-- Footer -->
