верстка страницы жалоб, обнаружение проблем с подвалом

--- a/first/templates/complaint.html
+++ b/first/templates/complaint.html
@@ -6,9 +6,28 @@
 <div class="modal" id="modal"></div>
 <div class="container">
     <div class="row mt-5">
-        <h3 class="mt-5 text-center">Введите данные, чтобы создать своего личного телеграмм-бота</h3>
+        <h3 class="mt-5 text-center">Запрос в службу поддержки</h3>
         <br>
         <hr class="col-10 offset-1">
+        <div class="container text-center " style="width:50%">
+            <div class="row row-cols-2 text-center">
+                <div class="col mr-5">
+                    <input required type="text" class="form-control m-1" placeholder="name" name="user_name">
+                </div>
+                <div class="col ml-5">
+                    <input required type="text" class="form-control m-1" placeholder="e-mail" name="user_email">
+                </div>
+            </div>
+            <div class="row text-start mt-2" style="color:#4e4e52">
+                <p class="ms-2">Message:<Br>
+                <textarea name="message" cols="40" rows="3" class="rounded w-100" style="border-color: #d2d2d4"></textarea></p>
+            </div>
+            <div class="row text-start mt-2" style="color:#4e4e52">
+                <input href="" class="btn btn-primary col-3 offset-4 p-2 fs-5" type="submit" value="Отправить">
+            </div>
+
+        </div>
+
     </div>
 </div>
 
