--- a/first/templates/footer.html
+++ b/first/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary" style="position: fixed; display: block; bottom-0; left-0; width:100%">
+<footer class="text-center text-lg-start bg-light text-muted mt-5" style="position: relative; margin-top:100%; width: 100%;">
   
     <!-- Section: Links  -->
     <section class="pt-1">
@@ -29,13 +29,13 @@
               <a href="/" class="text-reset h-25">Main</a>
             </p>
             <p>
-              <a href="registration/" class="text-reset">Registration</a>
+              <a href="/registration/" class="text-reset">Registration</a>
             </p>
             <p>
-              <a href="create_bot/" class="text-reset">Create bot</a>
+              <a href="/create_bot/" class="text-reset">Create bot</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Help</a>
+              <a href="/complaint/" class="text-reset">Help</a>
             </p>
           </div>
           <!-- Grid column -->
