--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -78,7 +78,7 @@
                         </label>
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src='{% static "${card_values.photo}" %}' alt="" style="max-width: 150px">
+                        <img src='../../staticroot/media/${card_values.photo}' alt="" style="max-width: 150px">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
