add checkbox to os

--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -37,6 +37,23 @@
                     </div>
                 </div>
                 <input id="search" type="text" class="form-control" placeholder="Поиск по функциям"><br>
+                <div id="os_search" class="col-8 offset-3 mb-3">
+                    <label class="checkbox-ios" style="margin-left: auto; margin-top: 10px">
+                        <input type="checkbox" id="windows" name="functions" value="win">
+                        <span class="checkbox-ios-switch"></span>
+                    </label>
+                    <span>Windows</span>
+                    <label class="checkbox-ios" style="margin-left: auto; margin-top: 10px">
+                        <input type="checkbox" id="mac" name="functions" value="mac">
+                        <span class="checkbox-ios-switch"></span>
+                    </label>
+                    <span>Linux</span>
+                    <label class="checkbox-ios" style="margin-left: auto; margin-top: 10px">
+                        <input type="checkbox" id="linux" name="functions" value="linux">
+                        <span class="checkbox-ios-switch"></span>
+                    </label>
+                    <span>Mac</span>
+                </div>
             </div>
             <div id="functions" class="offset-0">
             </div>
